syntax = "proto3";

option go_package = "github.com/stopa323/kimbap/api/bmc";

package bmc;


service BMC {
    rpc GetServerPowerStatus (BMCAccess) returns (ServerPowerStatusResponse) {}
}

enum PowerStatus {
    UNKNOWN = 0;
    ON = 1;
    OFF = 2;
    POWERING_ON = 3;
    POWERING_OFF = 4;
}

message BMCAccess {
    string connectionString = 1;
}

message ServerPowerStatusResponse {
    PowerStatus status = 1;
}